--- a/src/accuracy/postprocess.ipynb
+++ b/src/accuracy/postprocess.ipynb
@@ -10,7 +10,7 @@
     "from collections import OrderedDict\n",
     "import os\n",
     "\n",
-    "# 처리할 파일 목록\n",
+    "# initial generated sequence from each configuration.,
     "input_files = [\n",
     "    \"answer-vanilla.jsonl\",\n",
     "    \"answer-matkv.jsonl\",\n",
@@ -19,7 +19,6 @@
     "\n",
     "for input_file in input_files:\n",
     "    # 예: \"answer-vanilla.jsonl\" -> \"vanilla.jsonl\"\n",
-    "    # answer- 접두어 제거\n",
     "    output_file = input_file.replace(\"answer-\", \"\")\n",
     "\n",
     "    with open(input_file, \"r\", encoding=\"utf-8\") as fin, \\\n",
@@ -30,19 +29,15 @@
     "            if not line:\n",
     "                continue\n",
     "\n",
-    "            # JSON 문자열 파싱\n",
     "            data = json.loads(line)\n",
     "\n",
-    "            # id를 먼저 넣은 새 OrderedDict 생성\n",
     "            new_data = OrderedDict()\n",
     "            new_data[\"id\"] = i\n",
     "\n",
-    "            # 기존 필드들 순서대로 추가 (단, 이미 존재하는 id는 제외)\n",
     "            for k, v in data.items():\n",
     "                if k != \"id\":\n",
     "                    new_data[k] = v\n",
     "\n",
-    "            # JSON 형태로 재작성하여 출력\n",
     "            fout.write(json.dumps(new_data, ensure_ascii=False) + \"\\n\")"
    ]
   },
@@ -55,7 +50,6 @@
     "import json\n",
     "import os\n",
     "\n",
-    "# 처리할 파일 목록\n",
     "input_files = [\n",
     "    \"vanilla.jsonl\",\n",
     "    \"matkv.jsonl\",\n",
@@ -63,7 +57,6 @@
     "]\n",
     "\n",
     "for input_file in input_files:\n",
-    "    # 예: \"vanilla-1.jsonl\" -> \"vanilla-1-final.jsonl\"\n",
     "    output_file = os.path.splitext(input_file)[0] + \"-final.jsonl\"\n",
     "\n",
     "    with open(input_file, \"r\", encoding=\"utf-8\") as fin, \\\n",
@@ -77,15 +70,12 @@
     "            data = json.loads(line)\n",
     "            answer = data.get(\"answer\", \"\")\n",
     "\n",
-    "            # \"\\n\\n\" 이전까지만 answer 사용\n",
     "            idx = answer.find(\"\\n\\n\")\n",
     "            if idx != -1:\n",
     "                answer = answer[:idx]\n",
     "\n",
-    "            # 공백 제거 후 다시 대입\n",
     "            data[\"answer\"] = answer.strip()\n",
     "\n",
-    "            # 결과 쓰기\n",
     "            fout.write(json.dumps(data, ensure_ascii=False) + \"\\n\")"
    ]
   },
